@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: mysqli_api.c,v 1.87.2.2 2004/08/12 22:11:46 georg Exp $ 
+  $Id: mysqli_api.c,v 1.87.2.3 2004/09/02 04:52:07 georg Exp $ 
 */
 
 #ifdef HAVE_CONFIG_H
@@ -1726,7 +1726,7 @@ PHP_FUNCTION(mysqli_stmt_attr_set)
 	}
 	MYSQLI_FETCH_RESOURCE(stmt, MY_STMT *, &mysql_stmt, "mysqli_stmt"); 
 
-	if (rc = mysql_stmt_attr_set(stmt->stmt, attr, (void *)&mode)) {
+	if ((rc = mysql_stmt_attr_set(stmt->stmt, attr, (void *)&mode))) {
 		RETURN_FALSE;
 	}
 	RETURN_TRUE;
@@ -1748,7 +1748,7 @@ PHP_FUNCTION(mysqli_stmt_attr_get)
 	}
 	MYSQLI_FETCH_RESOURCE(stmt, MY_STMT *, &mysql_stmt, "mysqli_stmt"); 
 
-	if (rc = mysql_stmt_attr_get(stmt->stmt, attr, &value)) {
+	if ((rc = mysql_stmt_attr_get(stmt->stmt, attr, &value))) {
 		RETURN_FALSE;
 	}
 	RETURN_LONG(value);
