@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: php_mysqli.h,v 1.38 2004/07/07 08:02:27 georg Exp $ 
+  $Id: php_mysqli.h,v 1.38.2.1 2004/09/02 04:52:07 georg Exp $ 
 */
 
 /* A little hack to prevent build break, when mysql is used together with
@@ -180,7 +180,7 @@ PHP_MYSQLI_EXPORT(zend_object_value) mysqli_objects_new(zend_class_entry * TSRML
 	} \
 	__ptr = (__type)my_res->ptr; \
 	if (!strcmp((char *)__name, "mysqli_stmt")) {\
-		if (!((MYSQL_STMT *)__ptr)->mysql) {\
+		if (! ((MY_STMT *)__ptr)->stmt->mysql) {\
   			php_error(E_WARNING, "Statement isn't valid anymore");\
 			RETURN_NULL();\
 		}\
